# robot-kinematics

./: .gitignore  README.es-AR.md  README.md
.github/workflows/: ros2_humble.yml
bot_neoetic_cli_scripts/: listener.py  node_noetic.py  talker.py
cpp_pubsub/: CMakeLists.txt  package.xml
docker/: Dockerfile  README.md  build.ps1  build.sh  install.sh  requirements.txt  requirements_ros.txt  run.ps1  run.sh
docs/theory/: README.md
docs/theory/src/: bibliography.bib  bibliography.yml  main.typ  template.typ
openmanipulator_transformations/: CMakeLists.txt  package.xml  setup.py
openmanipulator_transformations/launch/: cli.launch  simulation.launch  simulation_only.launch  transformations.launch
openmanipulator_transformations/nodes/: forward_kinematics_srv.py  inverse_kinematics_srv.py
openmanipulator_transformations/scripts/: client.py  test.py  test_client.py  transformation_client.py  transformation_service.py  transformation_test_client.py
openmanipulator_transformations/src/kinematics/: __init__.py  config.py  utils.py
openmanipulator_transformations/srv/: Transform.srv
openmanipulator_transformations/tests/: test_transformations.py  tests.test
openmanipulator_x/: .gitignore  robotis.repos
py_pubsub/: package.xml  setup.py
robot_kinematics/: CMakeLists.txt  package.xml  setup.py
robot_kinematics/launch/: transformations.launch
robot_kinematics/nodes/: forward_kinematics_srv.py  inverse_kinematics_srv.py
robot_kinematics/scripts/: client.py  test_client.py
robot_kinematics/src/kinematics/: config.py  utils.py
robot_kinematics/srv/: Transform.srv
robot_kinematics/tests/: test_transformations.py  tests.test
