<?xml version="1.0"?>
<package format="2">
  <name>robot_kinematics</name>
  <version>0.1.0</version>
  <description>Control an OpenManipulator-X arm using robot kinematics</description>

  <author email="tomasbadenes@gmail.com">Tomás Badenes</author>
  <author email="me@juanm04.com">Juan Martín Seery</author>
  <author email="adrielfernandez93@gmail.com">Santiago Fernandez</author>
  <author email="lorenzomajoros@gmail.com">Lorenzo Majoros</author>

  <maintainer email="tomasbadenes@gmail.com">Tomás Badenes</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="repository">https://github.com/b-Tomas/robot-kinematics</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>roslaunch</exec_depend>

  <exec_depend>open_manipulator_msgs</exec_depend>

  <export>
  </export>
</package>
